--- a/jc-club-auth/jc-club-auth-application/jc-club-auth-application-controller/pom.xml
+++ b/jc-club-auth/jc-club-auth-application/jc-club-auth-application-controller/pom.xml
@@ -16,4 +16,21 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.4.2</version>
+        </dependency>
+
+        <!--sa-token 依赖-->
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot-starter</artifactId>
+            <version>1.39.0</version>
+        </dependency>
+    </dependencies>
+
+
 </project>
