--- a/jc-club-oss/src/main/resources/bootstrap.yml
+++ b/jc-club-oss/src/main/resources/bootstrap.yml
@@ -11,3 +11,6 @@ spring:
         group: DEFAULT_GROUP
         namespace:
         file-extension: yaml
+      discovery:
+        enabled: true
+        server-addr: 117.72.70.124:8848
