--- a/jc-club-auth/jc-club-auth-application/jc-club-auth-application-controller/pom.xml
+++ b/jc-club-auth/jc-club-auth-application/jc-club-auth-application-controller/pom.xml
@@ -42,6 +42,11 @@
             <artifactId>commons-pool2</artifactId>
             <version>2.9.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.jc</groupId>
+            <artifactId>jc-club-auth-domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
