--- a/jc-club-auth/jc-club-auth-application/pom.xml
+++ b/jc-club-auth/jc-club-auth-application/pom.xml
@@ -21,5 +21,13 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>com.jc</groupId>
+            <artifactId>jc-club-auth-infra</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
